--- a/chat-ui/.env.example
+++ b/chat-ui/.env.example
@@ -1,2 +1,2 @@
-CHAT_BACKEND_URL=http://localhost:8080/chat
+GAME_SERVICE_URL=http://localhost:8080/
 PROMPTS_BACKEND_URL=http://localhost:8080/prompts
