--- a/game-service/pyproject.toml
+++ b/game-service/pyproject.toml
@@ -8,17 +8,18 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 python-dotenv = "^1.0.1"
-langchain="^0.1.15"
-langchain_core="^0.1.41"
-langchain_community="^0.0.32"
-langchain_openai="^0.1.2"
-tiktoken="^0.6.0"
+openai= "1.30.3"
 fastapi="^0.110.1"
 uvicorn="^0.29.0"
 instructor="^1.2.6"
+Chessnut="0.3.1"
 pytest = "^7.4.3"
 pymongo = "^4.7.2"
+requests="^2.32.2"
 fentoboardimage  = "^1.3.0"
+opentelemetry-api = "1.24.0"
+opentelemetry-sdk = "1.24.0"
+opentelemetry-instrumentation-requests = "0.45b0"
 
 
 [build-system]
