--- a/chess-api/Dockerfile
+++ b/chess-api/Dockerfile
@@ -1,14 +1,10 @@
 FROM node:20-alpine
-
-WORKDIR /app
+WORKDIR /usr/src/app
 RUN --mount=type=bind,source=package.json,target=package.json \
     --mount=type=bind,source=package-lock.json,target=package-lock.json \
     --mount=type=cache,target=/root/.npm \
-    npm ci \
+    npm ci --omit=dev \
 USER node
 COPY . .
-
-RUN npm run build
-
 EXPOSE 3000
-CMD ["node", "server.js"]
+CMD node index.js
