--- a/chat-ui/package.json
+++ b/chat-ui/package.json
@@ -48,7 +48,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@azure/monitor-opentelemetry": "^1.1.0",
+		"applicationinsights": "^3.1.0",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"node-html-parser": "^6.1.11",
