--- a/rag-service/pyproject.toml
+++ b/rag-service/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "game-service"
+name = "rag-service"
 version = "0.1.0"
 description = ""
 authors = ["PJ <pj>"]
@@ -10,12 +10,11 @@ python = "^3.11"
 python-dotenv = "^1.0.1"
 openai= "1.30.3"
 fastapi="^0.110.1"
-uvicorn="^0.29.0"
-instructor="^1.2.6"
-Chessnut="0.3.1"
-pymongo = "^4.7.2"
-requests="^2.32.2"
-fentoboardimage  = "^1.3.0"
+langchain-core="^0.2.3"
+langchain-openai="^0.1.8"
+langchain="^0.2.1"
+tiktoken="^0.7.0"
+langchain-mongodb="0.1.5"
 opentelemetry-api = "^1.24.0"
 opentelemetry-sdk = "^1.24.0"
 opentelemetry-instrumentation-requests = "^0.45b0"
