--- a/stockfish-server/package.json
+++ b/stockfish-server/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "pkg": "^4.4.0",
-    "stockfish": "^10.0.2"
+    "stockfish": "^10.0.2",
+    "@azure/monitor-opentelemetry": "^1.5.0"
   },
   "devDependencies": {},
   "scripts": {
