--- a/rag-service/pyproject.toml
+++ b/rag-service/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 python-dotenv = "^1.0.1"
 openai= "1.30.3"
 fastapi="^0.110.1"
+uvicorn="^0.29.0"
 langchain-core="^0.2.3"
 langchain-openai="^0.1.8"
 langchain="^0.2.1"
@@ -20,6 +21,8 @@ opentelemetry-sdk = "^1.25.0"
 opentelemetry-instrumentation-requests = "^0.46b0"
 azure-monitor-opentelemetry-exporter = "^1.0.0b26"
 opentelemetry-instrumentation-fastapi = "^0.46b0"
+pymongo = "^4.7.2"
+requests="^2.32.2"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.3"
